# AI_Agents

./:   .pub  .gitignore  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub
CHATGPT-CLONE/: chat-gpt-clone-memory.db  dummy-agent.ipynb  facts.txt  main.py
CONTENT-PIPELNIE-AGENT/: main.py  tools.py
CUSTOMER-SUPPORT-AGENT/: customer-support-memory.db  main.py  models.py  tool.py  tools.py  workflow.py
CUSTOMER-SUPPORT-AGENT/my_agents/: account_agent.py  billing_agent.py  order_agent.py  output_guardrails.py  technical_agent.py  triage_agent.py
EMAIL-REFINER-AGENT/: api_mode.ipynb  code_mode.ipynb  deploy.py  pyproject.toml  remote.py  session.db
EMAIL-REFINER-AGENT/email_refiner/: agent.py  prompt.py
EMAIL-REFINER-AGENT/email_refiner/.adk/: session.db
EMAIL-REFINER-AGENT/travel_advisor_agent/.adk/: session.db
Financial-Analyst/: pyproject.toml
Financial-Analyst/financial_advisor/: agent.py
Financial-Analyst/financial_advisor/.adk/: session.db
Financial-Analyst/financial_advisor/sub_agents/: financial_analyst.py  news_analyst.py
GrokDeepResearchAgent/: deep-research-team.ipynb  email-optimizer-team.ipynb  main.py  tools.py
HELLO-LANGGRAPH/: langgraph.json  main.ipynb  memory.db-shm  memory.db-wal
JOB-HUNTER-AGENT/: main.py
MY-FIRST-AGENT/: main.ipynb
Multi-Agent-Architectures/: graph.py  main.ipynb  pyproject.toml
NEWS-READER-AGENT/: main.py  tools.py
YOUTUBE-SHORTS-MAKER/: pyproject.toml
YOUTUBE-THUMBNAIL-MAKER-AGENT/: main.ipynb
workflow-architectures/: main.ipynb
workflow-testing/: main.py  tests.py
(+31 files in other folders)
